--- a/web design projects/tributePage/index.html
+++ b/web design projects/tributePage/index.html
@@ -123,7 +123,7 @@
     </div>
     <div class="card text-center">
         <h3 class="mt-5">For more information on Jeremy Clarkson please click on the button below</h3>
-        <a id="tribute-link" href="https://en.wikipedia.org/wiki/Jeremy_Clarkson" target="_blank"><input value="Click Here" class="btn btn-primary button-color mt-4 mb-4"></a>
+        <a id="tribute-link" href="https://en.wikipedia.org/wiki/Jeremy_Clarkson" target="_blank"><input type="button" value="Click Here" class="btn btn-primary button-color mt-4 mb-4"></a>
     </div>
 </body>
 </html>
