--- a/web design projects/tributePage/index.html
+++ b/web design projects/tributePage/index.html
@@ -5,74 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="site.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
     <title>Jeremy Clarkson Tribute Page</title>
-    <style>
-        body{
-            max-width: 100%;
-            overflow-x: hidden;
-            background-image: linear-gradient(141deg, #f0bf83 0%, #1fc8db 51%, #2cb5e8 75%);
-            font: normal 18px Arial, Helvetica, sans-serif;            
-        }
-        h1, h2, h3, p{
-            color: #333 !important;
-        }
-        li{
-            padding: 25px 0px 25px 15px;
-            color: #333 !important;
-        }
-        .button-color{
-           background: #fd8e04 !important;  
-        }
-        /*Responsive Screens*/
-        /* Small devices (landscape phones, 576px and up) */
-        @media only screen and (max-width: 576px){
-            .container {
-                margin-top: 10px;
-                margin-bottom: 10px;
-                margin-left: auto;
-                margin-right: auto;
-            }  
-        }
-        /* Medium devices (tablets, 768px and up) */
-        @media only screen and (min-width: 768px) {
-            .container{
-                margin-top: 20px;
-                margin-bottom: 20px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-        }
-        /* weird */
-        @media  (max-width: 991px){
-            .container{
-                margin-top: 20px;
-                margin-bottom: 20px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-        }
-        /* Large devices (desktops, 992px and up) */
-        @media only screen and (min-width: 992px) {
-            .container{
-                margin-top: 20px;
-                margin-bottom: 20px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-        }
-        /* Extra large devices (large desktops, 1200px and up) */
-        @media only screen and (min-width: 1200px){
-            .container{
-                margin-top: 30px;
-                margin-bottom: 30px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-        }
-    </style>
 </head>
 <body id="main" class="container">
     <div class="jumbotron text-center mt-lg-4 mb-lg-4 mt-2 mb-2">
